--- a/static/css/style.css
+++ b/static/css/style.css
@@ -257,6 +257,12 @@ table {
   font-size: 0.95rem;
 }
 
+.table-responsive {
+  width: 100%;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
 thead {
   background-color: transparent;
 }
