--- a/templates/device_details.html
+++ b/templates/device_details.html
@@ -511,7 +511,7 @@
                 coreDiv.innerHTML = `
                     <div style="font-size: 0.7rem; margin-bottom: 2px; display: flex; justify-content: space-between;">
                         <span>Core ${idx}</span>
-                        <span>${core.toFixed(0)}%</span>
+                        <span>${core}%</span>
                     </div>
                     <div class="progress-track" style="height: 4px;">
                         <div class="progress-fill ${core > 80 ? 'high' : ''}" style="width: ${core}%"></div>
